# zero2prod

./: Cargo.toml
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
